# CameraCVGLView

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nvision/face_tracker_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: can_test.txt
app/src/main/assets/test/: test_test.txt
app/src/main/cpp/: global_interface.h  jniapi.cpp  jniapi.h  logger.h  nv_cam_background.cpp  nv_cam_background.h  nv_point_cloud.cpp  nv_point_cloud.h  nv_utils.h  nvapp.cpp  nvapp.h  nvrenderer.cpp  nvrenderer.h  nvtracker.cpp  nvtracker.h
app/src/main/java/com/nvision/facetracker/: CameraRenderView.java  MainActivity.java  PermissionHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: rotatergb.rs  yuv2rgb.rs
app/src/test/java/com/nvision/face_tracker_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
